# proofster

./: .buildpacks  README.md
domain/: .gitignore
domain/conjunctive_normalizer/: factory.py  normalizer.py  service.py  test.py  test_input.py
domain/conjunctive_normalizer/models/: Formula.py  Unary.py
domain/negation_normalizer/: normalizer.py  service.py  test.py  test_input.py
domain/prenex_normalizer/: normalizer.py  service.py  test.py  test_input.py
domain/prenex_normalizer/models/: Binary.py  Enums.py  Variable.py
domain/transpiler/: service.py  test.py  test_input.py
domain/transpiler/models/: Function.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  api.ts  constants.ts  errors.ts  index.tsx  store.ts  theme.ts
frontend/src/components/: ControlPanel.tsx
frontend/src/models/: formula.ts  metadata.ts  requests.ts  result.ts  workspace.ts
frontend/src/network/: algorithmApi.ts  formulaApi.ts  workspaceApi.ts
frontend/src/services/: AlgorithmService.ts  FormulaService.ts  MetadataService.ts  (+4 more)
microservices/: .gitignore
microservices/algorithm/: algorithm-service.yaml  go.mod  go.sum  main.go
microservices/formulas/: Dockerfile  docker-compose.yaml  formulas-service.yaml  pyproject.toml
microservices/formulas/api/: apps.py  models.py  serializers.py  service.py  urls.py  views.py
microservices/formulas/config/: settings.py  urls.py
microservices/users/: pyproject.toml
microservices/workspaces/: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt  workspaces-service.yaml
(+55 files in other folders)
